--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <h2 class="apresentacao__conteudo__subtitulo">Acesse minhas redes:</h2>
                     <a class="apresentacao__conteudo__links__navegacao" href="https://www.instagram.com/">
                        <img src="Assets/assets/instagram.png"> intagram</a>
-                    <a class="apresentacao__conteudo__links__navegacao" href="https://github.com/">
+                    <a class="apresentacao__conteudo__links__navegacao" href="https://github.com/ericles4">
                        <img src="Assets/assets/github.png"> github</a>
                     <a class="apresentacao__conteudo__links__navegacao" href="https://www.twitch.tv/">
                       <img src="Assets/assets/twitch.png">  Twitch</a>
