--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
        <main class="apresentacao">
             <section class="apresentacao__conteudo">
                 <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="Destaque-titulo">um Front-end de qualidade!</strong></h1>
-                <p class="apresentacao__conteudo__texto">Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+                <p class="apresentacao__conteudo__texto">Olá! Sou Ericle André, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
                 <div class="apresentacao__conteudo__links">
                     <h2 class="apresentacao__conteudo__subtitulo">Acesse minhas redes:</h2>
                     <a class="apresentacao__conteudo__links__navegacao" href="https://www.instagram.com/">
